--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.3"
 django-ninja = "^1.3.0"
 pydantic = "^2.10.0"
 email-validator = "^2.2.0"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
