--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-ninja = "^1.3.0"
 pydantic = "^2.10.0"
 email-validator = "^2.2.0"
 djangorestframework-simplejwt = "^5.3.1"
+psycopg2 = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
