--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^2.10.0"
 email-validator = "^2.2.0"
 djangorestframework-simplejwt = "^5.3.1"
 psycopg2 = "^2.9.10"
+python-memcached = "^1.62"
 
 
 [tool.poetry.group.dev.dependencies]
